fix: change apprpriate color for tiles in flashcard and quiz set and add proper alignment for elements

--- a/front-end/mind_stack/src/app/pages/community-page/components/post-card/post-card/post-card.scss
+++ b/front-end/mind_stack/src/app/pages/community-page/components/post-card/post-card/post-card.scss
@@ -169,7 +169,7 @@
 }
 
 .post-content-card {
-  background: #65C497;
+  background: #3dac78;
   border-radius: 12px;
   padding: 20px;
   display: flex;
