--- a/front-end/mind_stack/src/app/pages/quizzes-page/quizzes-page.scss
+++ b/front-end/mind_stack/src/app/pages/quizzes-page/quizzes-page.scss
@@ -248,7 +248,7 @@ $mobile-breakpoint: 768px;
 }
 
 .study-set-card {
-    background: #65C497;
+    background: #3dac78;
     border-radius: 15px;
     padding: 0.5rem 1.5rem;
     display: flex;
