--- a/front-end/mind_stack/src/app/pages/study-sets-page/study-sets-page.scss
+++ b/front-end/mind_stack/src/app/pages/study-sets-page/study-sets-page.scss
@@ -206,7 +206,7 @@ $transition-normal: 0.3s ease;
 }
 
 .study-set-card {
-    background: #65C497;
+    background: #3dac78;
     border-radius: 15px;
     padding: 0.5rem 1.5rem;
     display: flex;
